--- a/TaskTracker.Test/TaskTracker.Test.csproj
+++ b/TaskTracker.Test/TaskTracker.Test.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tasktracker.Core\TaskTracker.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
